@@ -1,3 +1,7 @@
+2002-08-14 Chris Ellec <chris @ gtx.seul.org >
+     * utils/gmk_sym.c Check for multiple instances of the same pin 
+     number and quit when this happens, give Fatal error messsage.
+
 2002-07-30 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* utils/gsymupdate: Added code to properly convert type= and label= 
